<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/upper_background"
        android:layout_width="match_parent"
        android:background="@color/other_background_color"
        android:layout_height="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/hello_admin"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="70dp"
            android:text="@string/your_room"
            android:textColor="@color/bg" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/main_box"
        android:layout_below="@+id/upper_background"
        android:background="@color/white"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="-80dp"
        android:layout_height="150dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/my_room"
            android:backgroundTint="@color/purple_700"
            android:layout_marginHorizontal="50dp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/user_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_box"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/user_biography_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_field"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/input_biography"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_below="@+id/user_biography_field"
        android:text="@string/save"
        android:backgroundTint="@color/purple_700"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50sp"
        android:layout_below="@+id/user_biography_field"
        android:text="@string/download"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/purple_700"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/other_background_color"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:text="@string/main"
            android:backgroundTint="@color/purple_700"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/contacts"
            android:backgroundTint="@color/purple_700"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:text="@string/vlog"
            android:backgroundTint="@color/purple_700"/>

    </LinearLayout>

</RelativeLayout>